--- a/package.json
+++ b/package.json
@@ -24,21 +24,18 @@
     "lib",
     "!**/__tests__",
     "!**/__fixtures__",
-    "!**/__mocks__",
-    "dist"
+    "!**/__mocks__"
   ],
   "scripts": {
-    "start": "tsc -p tsconfig.json",
-    "build": "yarn build:clean && yarn build:bundle && yarn build:types && yarn build:paths",
+    "build": "yarn build:clean && yarn build:bundle",
     "build:simple": "yarn build:clean && tsc && yarn build:types && yarn build:paths",
-    "build:clean": "rimraf dist/*",
-    "build:bundle": "rollup -c",
+    "build:clean": "rimraf lib/*",
+    "build:bundle": "bob build",
     "build:types": "copyfiles -u 1 \"src/types/*.d.ts\" dist",
     "build:paths": "tscpaths -p tsconfig.json -s ./src -o ./dist",
     "test": "mocha",
     "test:watch": "mocha -w",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" yarn test",
-    "prepare": "bob build",
     "commit": "cz",
     "lint": "eslint . --ext .ts",
     "release": "semantic-release",
